Do not use C-style casts into void*

See also the respective commit in kross.git.

BUG: 325055